[tool.poetry]
name = "actrac"
version = "1.0.0"
description = "Library for interacting with ACT REST API"
authors = ["Arista Cloud Test Development <act-dev@arista.com>"]
readme = "README.md"
license = "BSD-3-Clause"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators"
]
packages = [{include = "actrac"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
mypy = "^0.950"
pytest-cov = "^4.0.0"
ruff = "^0.0.287"
twine = "^4.0.2"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
select = ["E", "W", "D", "I", "F", "PL"]
line-length = 100

[tool.ruff.per-file-ignores]
"**/test/*" = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107"]
